[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/components/SidePanel.gd" type="Script" id=1]
[ext_resource path="res://styles/theme.tres" type="Theme" id=2]
[ext_resource path="res://styles/YellowButton.tres" type="Theme" id=3]
[ext_resource path="res://styles/TabButton.tres" type="Theme" id=5]
[ext_resource path="res://styles/GreyButton.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.203922, 0.254902, 1 )
border_width_left = 18
border_width_top = 20
border_width_right = 18
border_width_bottom = 20
border_color = Color( 0.168627, 0.203922, 0.254902, 1 )
corner_radius_top_right = 12

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.886275, 0.886275, 0.886275, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="SidePanel" type="PanelContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -518.0
margin_right = 178.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 20.0
margin_right = 182.0
margin_bottom = 498.0
custom_constants/separation = 12

[node name="TabButtons" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 62.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="Button" parent="VBoxContainer/TabButtons"]
margin_right = 164.0
margin_bottom = 29.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
pressed = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Projects"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Versions" type="Button" parent="VBoxContainer/TabButtons"]
margin_top = 33.0
margin_right = 164.0
margin_bottom = 62.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Versions"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Templates" type="Button" parent="VBoxContainer/TabButtons"]
visible = false
margin_top = 66.0
margin_right = 164.0
margin_bottom = 95.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Templates"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 164.0
margin_bottom = 78.0
custom_styles/separator = SubResource( 3 )

[node name="Panes" type="TabContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 164.0
margin_bottom = 478.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="Projects" type="VBoxContainer" parent="VBoxContainer/Panes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="New" type="Button" parent="VBoxContainer/Panes/Projects"]
margin_right = 164.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "NEW PROJECT"

[node name="Import" type="Button" parent="VBoxContainer/Panes/Projects"]
margin_top = 41.0
margin_right = 164.0
margin_bottom = 74.0
theme = ExtResource( 6 )
text = "Import"

[node name="Versions" type="VBoxContainer" parent="VBoxContainer/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="AddCustom" type="Button" parent="VBoxContainer/Panes/Versions"]
margin_right = 169.0
margin_bottom = 31.0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.207843, 0.207843, 0.207843, 1 )
text = "ADD CUSTOM VERSION"

[node name="BetaVersions" type="CheckBox" parent="VBoxContainer/Panes/Versions"]
margin_top = 37.0
margin_right = 169.0
margin_bottom = 61.0
text = "Show Beta Versions"

[node name="MonoVersions" type="CheckBox" parent="VBoxContainer/Panes/Versions"]
margin_top = 67.0
margin_right = 169.0
margin_bottom = 91.0
text = "Show Mono (C#) Versions"

[node name="Templates" type="VBoxContainer" parent="VBoxContainer/Panes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6
[connection signal="pressed" from="VBoxContainer/TabButtons/Projects" to="." method="_on_Projects_pressed"]
[connection signal="pressed" from="VBoxContainer/TabButtons/Versions" to="." method="_on_Versions_pressed"]
[connection signal="pressed" from="VBoxContainer/TabButtons/Templates" to="." method="_on_Templates_pressed"]
[connection signal="pressed" from="VBoxContainer/Panes/Projects/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer/Panes/Projects/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="VBoxContainer/Panes/Versions/AddCustom" to="." method="_on_AddCustom_pressed"]
[connection signal="toggled" from="VBoxContainer/Panes/Versions/BetaVersions" to="." method="_on_BetaVersions_toggled"]
[connection signal="toggled" from="VBoxContainer/Panes/Versions/MonoVersions" to="." method="_on_MonoVersions_toggled"]
